# toolbox

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml  pr-attention.yml
ai-scheduler/: .gitignore  CONTEXT.md  Makefile  README.md  config.example.toml  index.html  package-lock.json  package.json  vite.config.ts
ai-scheduler/docs/: spec.md
ai-scheduler/docs/adr/: 0001-wails-vanilla-typescript-frontend.md  0002-app-open-scheduling-with-visible-misses.md  0003-toml-config-with-in-app-raw-editor.md  0004-sqlite-run-history.md  0005-tauri-rust-desktop-app.md  (+8 more)
ai-scheduler/src/: main.ts  styles.css
ai-scheduler/src-tauri/: Cargo.toml  tauri.conf.json
ai-scheduler/src-tauri/mobile/: index.html  login.html  mobile-login.js  mobile-view.js  mobile-view.test.mjs  mobile.css  mobile.js
ai-scheduler/src-tauri/src/: config.rs  lib.rs  main.rs  mobile.rs  paths.rs  process.rs  runners.rs  scheduler.rs  store.rs
context/: create-script-for-work-tree-setup-CONTEXT.md
media-scripts/: consolidate_files.py  delete_empty_dirs.py  delete_moved_files.py  force_gp_reupload.py  split_dir.py
netcheck/: netcheck.py
pr-attention/: README.md  go.mod  main.go
pr-attention/cmd/: ack.go  clear.go  root.go  run.go  status.go
pr-attention/schedulers/: com.ar.pr-attention.plist  crontab.example  pr-attention.service  pr-attention.timer
pr-attention/testdata/: gh_responses.json
wt/: Makefile  README.md  go.mod  main.go
wt/cmd/: attach.go  create.go  create_test.go  delete.go  integration_test.go  list.go  root.go  slot.go  slot_test.go
wt/internal/git/: git.go  (+1 more)
(+18 files in other folders)
