[package]
name = "ai-scheduler"
version = "0.1.0"
description = "Local AI routine scheduler"
authors = ["AI Scheduler Contributors"]
edition = "2021"

[lib]
name = "ai_scheduler"
path = "src/lib.rs"

[[bin]]
name = "ai-scheduler"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
cron = "0.15"
libc = "0.2"
nanoid = "0.4"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
toml = "0.9"

[dev-dependencies]
assert_fs = "1"
tempfile = "3"
